Fixed the MyWorkComponent on touchscreens

--- a/src/styles/partials/popup.scss
+++ b/src/styles/partials/popup.scss
@@ -80,7 +80,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     line-height: 1.5;
     min-width: 200px;
