--- a/src/styles/partials/myWork.scss
+++ b/src/styles/partials/myWork.scss
@@ -55,6 +55,10 @@
     opacity: 1;
 }
 
+.project-buttons--hover {
+    opacity: 1;
+}
+
 .project-desc {
     font-size: 1rem;
     font-weight: 700;
