--- a/src/styles/vars/global.scss
+++ b/src/styles/vars/global.scss
@@ -23,6 +23,7 @@
     font-size: 0.8rem;
     overflow: hidden;
     transition: all 0.2s;
+    transition: transform 1s;
     font-weight: 700;
     text-align: center;
     cursor: pointer;
