--- a/src/styles/partials/aboutMe.scss
+++ b/src/styles/partials/aboutMe.scss
@@ -12,63 +12,79 @@
     animation: none;
 }
 
-.characters {
-    margin: 1rem 0.5rem;
+.nav-menu--margin {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 35px;
+}
+
+.description {
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    margin: 0.5rem 2rem;
+}
+
+.description > p {
+    font-size: 1rem;
+    margin: 0;
+    padding: 1rem 1rem;
+    padding-bottom: 0;
+    max-width: 800px;
+    text-align: justify;
+}
+
+.profile-img-characters-container {
+    float: left;
+    width: 250px;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.profile-img {
+    margin: 2rem;
+    border-radius: 2rem;
+    width: 150px;
+    height: 190px;
+    background: white;
+    box-shadow: 0px 0px 8px 8px $highlight_color;
+    img {
+        width: 150px;
+        border-radius: 2rem;
+        object-fit: contain;
+    }
+}
+.characters {
+    margin: 0.5rem 0.5rem;
+    display: flex;
+    justify-content: center;
     align-items: flex-start;
-    gap: 0.5rem;
+    column-gap: 25px;
     width: 100%;
     max-width: 1200px;
     flex-wrap: wrap;
     div {
         @include flex;
         flex-direction: column;
-        width: 100px;
-        // transform: scale(0);
+        width: 50px;
         transition: all 0.5s ease-in;
         img {
-            height: 100px;
-            width: 100px;
+            height: 50px;
+            width: 50px;
             background: $highlight_color;
-            border-radius: 1rem;
+            border-radius: 10px;
             box-shadow: 0 0 15px 1px rgb(0, 0, 0);
             transition: all 0.2s;
         }
         p {
-            margin-top: 1rem;
-            font-size: 0.8rem;
+            margin-top: 0.5rem;
+            font-size: 10px;
             font-weight: 700;
             text-align: center;
         }
-    }
-}
-
-.description {
-    margin: 2rem;
-    #profile-img-container {
-        float: left;
-        margin: 2rem;
-        border-radius: 2rem;
-        width: 150px;
-        height: 190px;
-        background: white;
-        box-shadow: 0px 0px 8px 8px $highlight_color;
-        overflow: hidden;
-        img {
-            width: 150px;
-            border-radius: 2rem;
-            object-fit: contain;
-        }
-    }
-
-    p {
-        font-size: 1rem;
-        padding: 1rem;
-        padding-bottom: 0;
-        max-width: 1200px;
-        margin-left: 220px;
-        margin-bottom: 0;
     }
 }
 
@@ -95,16 +111,16 @@
 
 .main-section > h1 {
     font-size: 1.5rem;
+    margin: 5px;
     color: $highlight_color;
     text-shadow: 0 0 2px rgb(0, 0, 0);
     text-align: center;
-    padding-top: 50px;
     position: relative;
 }
 .main-section > h1::after {
     content: "";
     position: absolute;
-    bottom: -5px;
+    bottom: -2px;
     left: calc(50% - 70px);
     height: 0.2rem;
     background: $highlight_color;
@@ -114,14 +130,13 @@ h2 {
     font-size: 1.5rem;
     color: $highlight_color;
     text-align: center;
-    padding-top: 1rem;
 }
 
 .langs {
-    margin: 1rem auto;
+    margin: 0 auto 1rem auto;
     display: grid;
-    grid-template-columns: repeat(8, 100px);
-    gap: 2rem;
+    grid-template-columns: repeat(8, 75px);
+    gap: 1rem;
     justify-content: center;
     max-width: 1200px;
 }
@@ -129,20 +144,20 @@ h2 {
     @include flex;
     flex-direction: column;
     text-decoration: none;
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
     background: $highlight_color;
-    border-radius: 1rem;
+    border-radius: 10px;
     box-shadow: 0 0 15px 1px rgb(0, 0, 0);
     text-align: center;
     font-weight: 700;
     color: black;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     transition: transform 0.2s;
 }
 
 .langs img {
-    height: 75%;
+    height: 70%;
     margin-bottom: 0.2rem;
 }
 
@@ -154,33 +169,30 @@ h2 {
 
 @media screen and (max-width: 1200px) {
     .langs {
-        grid-template-columns: repeat(4, 100px);
-        grid-template-rows: repeat(2, 100px);
+        grid-template-columns: repeat(4, 75px);
+        grid-template-rows: repeat(2, 75px);
     }
 }
 
 @media screen and (max-width: 768px) {
-    .langs {
-        grid-template-columns: repeat(2, 100px);
-        grid-template-rows: repeat(4, 100px);
-    }
     .description {
         display: flex;
         flex-direction: column;
         align-items: center;
-        p {
-            text-align: justify;
-            margin-left: 0;
-        }
-        img {
-            float: none;
-        }
     }
-    .description :nth-child(1) {
+    .description > :nth-child(1) {
         order: 0;
     }
-    .description :nth-child(2) {
+    .description > :nth-child(2) {
         order: -1;
+    }
+    .langs {
+        grid-template-columns: repeat(2, 75px);
+        grid-template-rows: repeat(4, 75px);
+    }
+    .profile-img-characters-container {
+        float: none;
+        width: 100%;
     }
 }
 
