--- a/src/styles/partials/popup.scss
+++ b/src/styles/partials/popup.scss
@@ -7,7 +7,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(2px);
     z-index: 99;
     display: flex;
@@ -31,7 +31,7 @@
 }
 
 .popup-card {
-    width: 60%;
+    width: 80%;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -41,13 +41,9 @@
 
 .popup-pictures {
     margin-bottom: 2rem;
-
-    background: #00acb57e;
-    box-shadow: 0px 0px 8px 2px $highlight_color;
-    border-radius: 1rem;
     box-sizing: border-box;
     width: 100%;
-    height: 70%;
+    height: 40%;
     overflow: hidden;
     padding: 0.5rem;
     box-sizing: border-box;
@@ -58,8 +54,9 @@
         min-width: 200px;
         max-width: 100%;
         max-height: 100%;
+        box-shadow: 0px 0px 8px 2px white;
         border-radius: 1rem;
-        object-fit: contain;
+        object-fit: fill;
         cursor: zoom-in;
     }
 }
@@ -109,7 +106,7 @@
 
         &[data-pos="-1"],
         &[data-pos="1"] {
-            opacity: 0.7;
+            opacity: 0.2;
             filter: blur(1px) grayscale(10%);
         }
 
@@ -138,13 +135,15 @@
     border-radius: 0.5rem;
     text-decoration: none;
     position: absolute;
-    top: 50%;
+    top: 43%;
+    opacity: 0.5;
     transform: translateY(-50%);
     transition: all 150ms ease;
 }
 .popup--nav--prev:hover,
 .popup--nav--next:hover,
 .popup--nav--close:hover {
+    opacity: 1;
     background-color: $highlight_color_hover;
     text-shadow: 0;
     color: white;
@@ -157,7 +156,7 @@
 }
 
 .popup--nav--close {
-    top: 30px;
+    top: 50px;
     right: 30px;
 }
 
