update styles, main change the popup image size

--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -2,7 +2,7 @@
 @use "../vars/global.scss" as *;
 
 .footer {
-    background: $bg_color_black;
+    background: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: auto;
     p {
