--- a/src/styles/partials/aboutMe.scss
+++ b/src/styles/partials/aboutMe.scss
@@ -20,9 +20,6 @@
 }
 
 .description {
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
     margin: 0.5rem 2rem;
 }
 
@@ -33,6 +30,10 @@
     padding-bottom: 0;
     max-width: 800px;
     text-align: justify;
+}
+
+.description > p:nth-child(2) {
+    padding-top: 0;
 }
 
 .profile-img-characters-container {
@@ -107,13 +108,14 @@
     height: auto;
     @include flex;
     flex-direction: column;
+    margin-bottom: 1rem;
 }
 
 .main-section > h1 {
     font-size: 1.5rem;
     margin: 5px;
     color: $highlight_color;
-    text-shadow: 0 0 2px rgb(0, 0, 0);
+    text-shadow: 0 0 3px rgb(0, 0, 0);
     text-align: center;
     position: relative;
 }
@@ -126,10 +128,13 @@
     background: $highlight_color;
     width: 140px;
 }
-h2 {
+.main-section > h2 {
     font-size: 1.5rem;
     color: $highlight_color;
     text-align: center;
+    text-shadow: 0 0 3px rgb(0, 0, 0);
+    margin: 0;
+    margin-bottom: 0.5rem;
 }
 
 .langs {
