--- a/src/styles/partials/contact.scss
+++ b/src/styles/partials/contact.scss
@@ -3,7 +3,7 @@
 
 .social {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     justify-content: center;
     margin: 0 auto;
 }
@@ -13,12 +13,12 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 1rem;
-        height: 80px;
-        width: 80px;
+        margin: 0.5rem 1rem 1rem 1rem;
+        height: 60px;
+        width: 60px;
         background: $highlight_color;
         box-shadow: 0 0 5px 1px rgb(0, 0, 0);
-        border-radius: 1rem;
+        border-radius: 10px;
         transition: background-color 0.3s;
     }
     a:hover {
@@ -38,12 +38,6 @@
 
 @media screen and (max-width: 768px) {
     .social {
-        a {
-            margin: 2rem 0;
-        }
-    }
-
-    .social {
-        gap: 8vw;
+        gap: 0.5rem;
     }
 }
