--- a/src/styles/partials/CV.scss
+++ b/src/styles/partials/CV.scss
@@ -11,6 +11,7 @@
     box-shadow: 0 0 20px 5px rgb(0, 0, 0);
     border-radius: 20px;
     object-fit: contain;
-    min-width: 200px;
-    max-width: 50vw;
+    min-width: 100px;
+    width: 50vw;
+    max-width: 400px;
 }
