--- a/src/styles/partials/popup.scss
+++ b/src/styles/partials/popup.scss
@@ -7,8 +7,8 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.95);
-    backdrop-filter: blur(2px);
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
     z-index: 99;
     display: flex;
     justify-content: center;
@@ -50,7 +50,7 @@
         min-width: 200px;
         width: 100%;
         height: 100%;
-        box-shadow: 0px 0px 8px 2px white;
+        box-shadow: 0px 0px 2px 2px white;
         border-radius: 1rem;
         object-fit: cover;
         cursor: zoom-in;
@@ -60,12 +60,13 @@
 .popup-outer {
     overflow: hidden;
     border-radius: 20px;
-    box-shadow: 0px 0px 8px 2px $highlight_color;
-    // background: $bg_color_grey;
-    backdrop-filter: blur(4px);
+    box-shadow: 0px 0px 2px 2px white;
+    background: rgb(218, 218, 218);
+    // backdrop-filter: blur(4px);
     box-sizing: border-box;
     min-width: 200px;
     width: 100%;
+    color: black;
     // height: auto;
 }
 
