--- a/src/styles/partials/popup.scss
+++ b/src/styles/partials/popup.scss
@@ -53,6 +53,7 @@
         box-shadow: 0px 0px 2px 2px white;
         border-radius: 1rem;
         object-fit: cover;
+        object-position: center;
         cursor: zoom-in;
     }
 }
