--- a/src/styles/partials/CV.scss
+++ b/src/styles/partials/CV.scss
@@ -4,14 +4,32 @@
 .CV--content {
     display: flex;
     justify-content: center;
-    margin: 1rem 0;
+    margin: 0;
+}
+.CV--content {
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0.5rem 1rem 1rem 1rem;
+        height: 60px;
+        width: 60px;
+        background: $highlight_color;
+        box-shadow: 0 0 5px 1px rgb(0, 0, 0);
+        border-radius: 10px;
+        transition: background-color 0.3s;
+    }
+    a:hover {
+        background: $highlight_color_hover;
+    }
 }
 
-.CV--img {
-    box-shadow: 0 0 20px 5px rgb(0, 0, 0);
-    border-radius: 20px;
-    object-fit: contain;
-    min-width: 100px;
-    width: 50vw;
-    max-width: 400px;
+.CV--content {
+    a {
+        img {
+            filter: invert(100%);
+            height: 80%;
+            width: 80%;
+        }
+    }
 }
