--- a/src/styles/partials/aboutMe.scss
+++ b/src/styles/partials/aboutMe.scss
@@ -108,7 +108,6 @@
     height: auto;
     @include flex;
     flex-direction: column;
-    margin-bottom: 1rem;
 }
 
 .main-section > h1 {
@@ -138,7 +137,7 @@
 }
 
 .langs {
-    margin: 0 auto 1rem auto;
+    margin: 0 auto;
     padding: 0 20px;
     display: flex;
     flex-wrap: wrap;
