--- a/src/styles/partials/intro.scss
+++ b/src/styles/partials/intro.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     z-index: 3;
     position: relative;
 }
