intro and popups big update

--- a/src/styles/partials/intro.scss
+++ b/src/styles/partials/intro.scss
@@ -5,9 +5,9 @@
     background-image: url("../../images/intro/intro-background.jpg");
     background-position: center;
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     width: 100%;
     height: 100svh;
     position: relative;
@@ -15,9 +15,10 @@
 
 .intro {
     position: relative;
-    width: 30vw;
+    width: 300px;
     perspective: 1000px;
-    top: -100px;
+    margin: 0 auto;
+    bottom: -30vh;
 }
 
 .intro-carousel {
@@ -29,40 +30,37 @@
 }
 
 .intro-picture {
-    width: 75%;
-    min-width: 100px;
-    max-width: 300px;
+    width: 200px;
     position: absolute;
-    top: -15vh;
+    top: -100px;
 }
 
-.intro-carousel .intro-carousel-item {
-    width: 100%;
-    min-width: 150px;
-    max-width: 400px;
-    height: 30vh;
-    position: absolute;
-    overflow: hidden;
-}
 .intro-carousel-item {
+    width: 100%;
+    max-width: 400px;
+    height: 150px;
+    position: absolute;
+    top: 120px;
+    overflow: hidden;
     box-shadow: 0px 0px 20px 0px #000;
     border-radius: 3vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // transform: translateX(-150vw) rotateY(360deg);
     transition: all 1s;
+    transform: rotateY(0) translateZ(0);
 }
+
 .intro-carousel-item-content {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
-    height: 80%;
-    border-radius: 3vh;
+    width: 90%;
+    height: 90%;
+    border-radius: 2vh;
     background: $bg_color_grey;
-    box-shadow: 0px 0px 20px 0px $highlight_color;
+    box-shadow: 0px 0px 10px 0px $highlight_color;
     position: relative;
 }
 
@@ -71,6 +69,7 @@
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
+    padding: 5%;
 }
 
 .scale {
@@ -79,18 +78,26 @@
 }
 
 .intro-carousel-item.it1 {
-    transform: rotateY(0deg) translateZ(20vw);
-}
-.intro-carousel-item.it2 {
-    transform: rotateY(-120deg) translateZ(20vw);
-}
-.intro-carousel-item.it3 {
-    transform: rotateY(-240deg) translateZ(20vw);
+    z-index: 0;
+    left: -300px;
 }
 
-.intro-carousel-item.it-out {
-    transform: rotateY(0deg) translateX(-220vw);
-    opacity: 0;
+.intro-carousel-item.it3 {
+    right: -300px;
+    z-index: 2;
+}
+
+.intro-carousel-item.it1.carousel {
+    left: unset;
+
+    transform: rotateY(0deg) translateZ(200px);
+}
+.intro-carousel-item.it2.carousel {
+    transform: rotateY(-120deg) translateZ(200px);
+}
+.intro-carousel-item.it3.carousel {
+    right: unset;
+    transform: rotateY(-240deg) translateZ(200px);
 }
 
 //-------------------------button----------------------------------
@@ -99,14 +106,9 @@
     background-color: $bg_color_grey;
     position: absolute;
     color: $highlight_color;
-    font-size: 3rem;
-    bottom: 30px;
-    left: 50%;
-    transform: translateX(-50%);
     display: inline-block;
     padding: 0px 15px;
     text-transform: uppercase;
-    letter-spacing: 4px;
     text-decoration: none;
     overflow: hidden;
     transition: 0.2s;
@@ -115,12 +117,21 @@
     cursor: pointer;
     z-index: 98;
 }
+.carousel-btn {
+    top: 60px;
+    right: 30px;
+    font-size: 1rem;
+}
+.down-btn {
+    bottom: 30px;
+    right: 30px;
+    font-size: 3rem;
+}
 
 .neon-button:hover {
     color: $fonts_color;
     background: $highlight_color_hover;
-    box-shadow: 0 0 30px $highlight_color_hover;
-    transition-delay: 1s;
+    box-shadow: 0 0 10px $highlight_color_hover;
 }
 
 .neon-button.focus {
@@ -143,7 +154,7 @@
     background: linear-gradient(90deg, transparent, $highlight_color_hover);
 }
 
-.neon-button:hover span:nth-child(1) {
+.neon-button.focus span:nth-child(1) {
     left: 100%;
     transition: 1s;
 }
@@ -156,7 +167,7 @@
     background: linear-gradient(180deg, transparent, $highlight_color_hover);
 }
 
-.neon-button:hover span:nth-child(2) {
+.neon-button.focus span:nth-child(2) {
     top: 100%;
     transition: 1s;
     transition-delay: 0.25s;
@@ -170,7 +181,7 @@
     background: linear-gradient(270deg, transparent, $highlight_color_hover);
 }
 
-.neon-button:hover span:nth-child(3) {
+.neon-button.focus span:nth-child(3) {
     right: 100%;
     transition: 1s;
     transition-delay: 0.5s;
@@ -184,7 +195,7 @@
     background: linear-gradient(0deg, transparent, $highlight_color_hover);
 }
 
-.neon-button:hover span:nth-child(4) {
+.neon-button.focus span:nth-child(4) {
     bottom: 100%;
     transition: 1s;
     transition-delay: 0.75s;
@@ -193,34 +204,105 @@
 // ---------------------/button---------------------------
 
 @media screen and (max-width: 1200px) {
-    .border {
-        width: 75vw;
-        height: 75vh;
+    .intro-carousel-item {
+        width: 180px;
+        height: 100px;
+        top: 180px;
     }
 
-    #header-text-content {
-        width: 75vw;
-        height: 75vh;
+    .intro-carousel-item.it1 {
+        left: -150px;
+        z-index: 0;
+    }
+
+    .intro-carousel-item.it3 {
+        right: -150px;
+        z-index: 2;
+    }
+
+    .intro-carousel-item.carousel {
+        width: 250px;
+    }
+
+    .intro-carousel p {
+        color: white;
+        font-size: 0.9rem;
+        font-weight: 700;
+        text-align: center;
     }
 }
 
 @media screen and (max-width: 600px) {
+    .intro-carousel-item {
+        width: 90px;
+    }
+
+    .intro-carousel-item.it1 {
+        z-index: 0;
+        left: 0;
+    }
+
+    .intro-carousel-item.it3 {
+        right: 0;
+        z-index: 2;
+    }
+
     .intro-carousel p {
         color: white;
         font-size: 0.8rem;
         font-weight: 700;
         text-align: center;
     }
+    .intro-carousel-item.carousel {
+        width: 150px;
+    }
+    .intro-carousel-item.it1.carousel {
+        transform: rotateY(0deg) translateZ(100px);
+    }
+    .intro-carousel-item.it2.carousel {
+        transform: rotateY(-120deg) translateZ(100px);
+    }
+    .intro-carousel-item.it3.carousel {
+        transform: rotateY(-240deg) translateZ(100px);
+    }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-height: 500px) {
+    .intro {
+        bottom: 0px;
+    }
+
+    .intro-picture {
+        width: 120px;
+        position: absolute;
+        top: 50px;
+    }
+
+    .intro-carousel-item {
+        width: 180px;
+        height: 100px;
+        top: 180px;
+    }
+
     .intro-carousel-item.it1 {
-        transform: rotateY(0deg) translateZ(240px);
+        left: -150px;
+        z-index: 0;
     }
-    .intro-carousel-item.it2 {
-        transform: rotateY(-120deg) translateZ(240px);
-    }
+
     .intro-carousel-item.it3 {
-        transform: rotateY(-240deg) translateZ(240px);
+        right: -150px;
+        z-index: 2;
+    }
+
+    .intro-carousel-item.carousel {
+        width: 250px;
+        top: 100px;
+    }
+
+    .intro-carousel p {
+        color: white;
+        font-size: 0.9rem;
+        font-weight: 700;
+        text-align: center;
     }
 }
