--- a/src/styles/partials/popup.scss
+++ b/src/styles/partials/popup.scss
@@ -21,79 +21,58 @@
     z-index: 9999;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     background-size: contain;
     background-repeat: no-repeat no-repeat;
     background-position: center center;
-    background-color: $bg_color_black;
+    background-color: $bg_color_grey;
     cursor: zoom-out;
 }
 
 .popup-card {
-    display: grid;
-    gap: 1rem;
+    background: $bg_color_grey;
+    border-radius: 1rem;
     width: 90%;
-    height: 95%;
+    max-width: 500px;
 }
 
-.popup-pictures {
+.popup-card--header {
+    width: 100%;
+    height: 20px;
+    padding: 5px 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.popup-card--content {
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
-    overflow: hidden;
-    padding: 0.5rem;
-    display: flex;
-    justify-content: center;
-
-    img {
-        min-width: 200px;
-        width: 100%;
-        height: 100%;
-        box-shadow: 0px 0px 2px 2px white;
-        border-radius: 1rem;
-        object-fit: cover;
-        object-position: center;
-        cursor: zoom-in;
-    }
-}
-
-.popup-outer {
-    overflow: hidden;
-    border-radius: 20px;
-    box-shadow: 0px 0px 2px 2px white;
-    background: rgb(218, 218, 218);
-    // backdrop-filter: blur(4px);
-    box-sizing: border-box;
-    min-width: 200px;
-    width: 100%;
-    color: black;
-    // height: auto;
-}
-
-.popup-inner {
-    box-sizing: border-box;
+    height: 90dvh;
+    overflow-y: auto;
+    padding-bottom: 5px;
+    border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    line-height: 1.5;
-    min-width: 200px;
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    padding: 10px;
+    align-items: center;
 }
 
-.popup-inner--paragraph {
-    margin: 0.2rem;
+.popup-card--img {
+    width: 95%;
+    border-radius: 0.5rem;
+    object-fit: cover;
+    cursor: zoom-in;
+}
+
+.popup-card--description {
+    padding: 0 10px;
 }
 
 .carousel {
     &__item {
         position: absolute;
         transition: all 0.3s ease-in;
-        top: 5px;
         z-index: -1;
         opacity: 0;
 
@@ -104,7 +83,7 @@
 
         &[data-pos="-1"],
         &[data-pos="1"] {
-            opacity: 0.1;
+            opacity: 0.4;
             filter: blur(1px) grayscale(10%);
         }
 
@@ -120,24 +99,21 @@
     }
 }
 
+.popup--nav {
+    width: 90%;
+    max-width: 500px;
+    position: relative;
+}
 .popup--nav--prev,
 .popup--nav--next,
 .popup--nav--close {
-    width: 40px;
-    line-height: 40px;
-    font-size: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
     color: black;
     background: $highlight_color;
-    box-shadow: 0 0 5px $highlight_color_hover;
-    border-radius: 0.5rem;
     text-decoration: none;
     position: absolute;
-    top: 43%;
-    opacity: 0.7;
-    transform: translateY(-50%);
     transition: all 150ms ease;
     z-index: 110;
 }
@@ -149,17 +125,31 @@
     text-shadow: 0;
     color: white;
 }
+
+.popup--nav--prev,
+.popup--nav--next {
+    width: 40px;
+    height: 40px;
+    font-size: 1.5rem;
+    box-shadow: 0 0 5px $highlight_color_hover;
+    border-radius: 0.5rem;
+    top: 43%;
+    opacity: 0.4;
+    transform: translateY(-50%);
+}
 .popup--nav--prev {
-    left: 5px;
+    left: -20px;
 }
 .popup--nav--next {
-    right: 5px;
+    right: -20px;
 }
 
 .popup--nav--close {
-    top: 30px;
-    right: 10px;
-    opacity: 1;
+    border-radius: 20px;
+    width: 20px;
+    height: 20px;
+    top: 5px;
+    right: 5px;
 }
 
 //hobbies
@@ -253,4 +243,27 @@
     .it5 {
         transform: rotateY(288deg) translateZ(300px);
     }
+}
+
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #1b1b1b;
+    border-radius: 0.5rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #666666;
 }
