--- a/src/styles/partials/popup.scss
+++ b/src/styles/partials/popup.scss
@@ -7,7 +7,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(4px);
     z-index: 99;
     display: flex;
@@ -33,14 +33,14 @@
 .popup-card {
     background: $bg_color_grey;
     border-radius: 1rem;
-    width: 90%;
+    width: 80%;
     max-width: 500px;
 }
 
 .popup-card--header {
     width: 100%;
-    height: 20px;
-    padding: 5px 0;
+    height: 50px;
+    line-height: 50px;
     text-align: center;
     text-transform: uppercase;
     font-weight: 700;
@@ -49,7 +49,7 @@
 .popup-card--content {
     box-sizing: border-box;
     width: 100%;
-    height: 90dvh;
+    height: 80dvh;
     overflow-y: auto;
     padding-bottom: 5px;
     border-radius: 0.5rem;
@@ -66,7 +66,13 @@
 }
 
 .popup-card--description {
-    padding: 0 10px;
+    padding: 10px;
+}
+
+.popup-card--description--p {
+    display: block;
+    margin: 0;
+    padding: 2px;
 }
 
 .carousel {
@@ -100,7 +106,7 @@
 }
 
 .popup--nav {
-    width: 90%;
+    width: 80%;
     max-width: 500px;
     position: relative;
 }
@@ -111,7 +117,7 @@
     justify-content: center;
     align-items: center;
     color: black;
-    background: $highlight_color;
+    background: $bg_color_grey;
     text-decoration: none;
     position: absolute;
     transition: all 150ms ease;
@@ -121,20 +127,18 @@
 .popup--nav--next:hover,
 .popup--nav--close:hover {
     opacity: 1;
-    background-color: $highlight_color_hover;
+    background-color: $bg_color_black;
     text-shadow: 0;
     color: white;
 }
 
 .popup--nav--prev,
 .popup--nav--next {
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 100px;
     font-size: 1.5rem;
-    box-shadow: 0 0 5px $highlight_color_hover;
     border-radius: 0.5rem;
-    top: 43%;
-    opacity: 0.4;
+    opacity: 0.5;
     transform: translateY(-50%);
 }
 .popup--nav--prev {
@@ -145,11 +149,12 @@
 }
 
 .popup--nav--close {
-    border-radius: 20px;
-    width: 20px;
-    height: 20px;
-    top: 5px;
-    right: 5px;
+    border-radius: 22px;
+    width: 44px;
+    height: 44px;
+    top: 2px;
+    right: 2px;
+    font-size: 30px;
 }
 
 //hobbies
