--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,11 +14,8 @@ body {
     width: 100vw;
     max-width: 100%;
     height: auto;
-    background: linear-gradient(180deg, $bg_color_grey, $bg_color_black);
+    background: $bg_color_grey;
+    // background: linear-gradient(180deg, $bg_color_grey, $bg_color_black);
     color: $fonts_color;
     cursor: default;
-}
-
-.stop-scrolling {
-    overflow: hidden;
 }
