--- a/src/styles/partials/CV.scss
+++ b/src/styles/partials/CV.scss
@@ -14,8 +14,8 @@
         margin: 0.5rem 1rem 1rem 1rem;
         height: 60px;
         width: 60px;
-        background: $highlight_color;
-        box-shadow: 0 0 5px 1px rgb(0, 0, 0);
+        // background: $highlight_color;
+        box-shadow: 0 0 5px 2px rgb(0, 0, 0);
         border-radius: 10px;
         transition: background-color 0.3s;
     }
@@ -27,7 +27,6 @@
 .CV--content {
     a {
         img {
-            filter: invert(100%);
             height: 80%;
             width: 80%;
         }
