--- a/src/styles/partials/aboutMe.scss
+++ b/src/styles/partials/aboutMe.scss
@@ -1,24 +1,6 @@
 @use "../vars/colours.scss" as *;
 @use "../vars/global.scss" as *;
 
-@mixin flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-@mixin hide {
-    opacity: 0;
-    animation: none;
-}
-
-.nav-menu--margin {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 35px;
-}
-
 .description {
     margin: 0.5rem 2rem;
 }
@@ -28,7 +10,6 @@
     margin: 0;
     padding: 1rem 1rem;
     padding-bottom: 0;
-    max-width: 800px;
     text-align: justify;
 }
 
@@ -47,11 +28,12 @@
 
 .profile-img {
     margin: 2rem;
+    padding: 0.2rem;
     border-radius: 2rem;
     width: 150px;
     height: 190px;
-    background: rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 0px 8px 8px black;
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 8px 4px black;
     img {
         width: 150px;
         border-radius: 2rem;
@@ -75,9 +57,9 @@
         img {
             height: 50px;
             width: 50px;
-            background: $highlight_color;
+            // background: $highlight_color;
             border-radius: 10px;
-            box-shadow: 0 0 15px 1px rgb(0, 0, 0);
+            box-shadow: 0 0 5px 2px rgb(0, 0, 0);
             transition: all 0.2s;
         }
         p {
@@ -87,106 +69,6 @@
             text-align: center;
         }
     }
-}
-
-.txt-highlight,
-.txt-highlight--no-hover {
-    color: $highlight_color;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-.txt-highlight:hover {
-    color: $highlight_color_hover;
-    font-weight: 700;
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-#about {
-    width: 100%;
-    height: auto;
-    @include flex;
-    flex-direction: column;
-}
-
-.main-section > h1 {
-    font-size: 1.5rem;
-    margin: 5px;
-    color: $highlight_color;
-    text-shadow: 0 0 3px rgb(0, 0, 0);
-    text-align: center;
-    position: relative;
-}
-.main-section > h1::after {
-    content: "";
-    position: absolute;
-    bottom: -2px;
-    left: calc(50% - 70px);
-    height: 0.2rem;
-    background: $highlight_color;
-    width: 140px;
-}
-.main-section > h2 {
-    font-size: 1.5rem;
-    color: $highlight_color;
-    text-align: center;
-    text-shadow: 0 0 3px rgb(0, 0, 0);
-    margin: 0;
-    margin-bottom: 0.5rem;
-}
-
-.langs {
-    margin: 0 auto;
-    padding: 0 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: center;
-}
-.langs-container {
-    @include flex;
-    flex-direction: column;
-    text-decoration: none;
-    height: 75px;
-    width: 75px;
-    background: $highlight_color;
-    border-radius: 10px;
-    box-shadow: 0 0 15px 1px rgb(0, 0, 0);
-    text-align: center;
-    font-weight: 700;
-    color: black;
-    font-size: 0.7rem;
-    transition: transform 0.2s;
-    position: relative;
-}
-
-.langs-container.in-progress {
-    background: linear-gradient(0deg, rgb(175, 0, 0), rgba(255, 255, 255, 0));
-    // opacity: 0.7;
-    position: relative;
-}
-
-.langs img {
-    height: 70%;
-    margin-bottom: 0.2rem;
-}
-
-.langs-container:hover,
-.characters div img:hover {
-    background: $highlight_color_hover;
-    transform: scale(1.2);
-}
-
-.langs-container.in-progress:hover {
-    background: linear-gradient(0deg, rgb(175, 0, 0), rgba(255, 255, 255, 0));
-}
-
-.langs-container.in-progress:hover::after {
-    content: "IN PROGRESS";
-    position: absolute;
-    background: rgba(0, 0, 0, 0.9);
-    color: white;
 }
 
 @media screen and (max-width: 768px) {
