--- a/src/styles/partials/contact.scss
+++ b/src/styles/partials/contact.scss
@@ -16,8 +16,8 @@
         margin: 0.5rem 1rem 1rem 1rem;
         height: 60px;
         width: 60px;
-        background: $highlight_color;
-        box-shadow: 0 0 5px 1px rgb(0, 0, 0);
+        // background: $highlight_color;
+        box-shadow: 0 0 5px 2px rgb(0, 0, 0);
         border-radius: 10px;
         transition: background-color 0.3s;
     }
@@ -29,7 +29,6 @@
 .social {
     a {
         img {
-            filter: invert(100%);
             height: 80%;
             width: 80%;
         }
