--- a/src/styles/partials/intro.scss
+++ b/src/styles/partials/intro.scss
@@ -2,7 +2,7 @@
 @use "../vars/global.scss" as *;
 
 .intro-bg {
-    background-image: url("../../images/intro/intro-background.jpg");
+    background-image: url("../../images/intro/intro-background-day.png");
     background-position: center;
     background-size: cover;
     // display: flex;
@@ -60,12 +60,12 @@
     height: 90%;
     border-radius: 2vh;
     background: $bg_color_grey;
-    box-shadow: 0px 0px 10px 0px $highlight_color;
+    box-shadow: 0px 0px 10px 0px $fonts_color;
     position: relative;
 }
 
 .intro-carousel p {
-    color: white;
+    color: $fonts_color;
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
@@ -119,8 +119,9 @@
 }
 .carousel-btn {
     top: 60px;
-    right: 30px;
+    right: 20px;
     font-size: 1rem;
+    padding: 8px;
 }
 .down-btn {
     bottom: 30px;
@@ -131,13 +132,13 @@
 .neon-button:hover {
     color: $fonts_color;
     background: $highlight_color_hover;
-    box-shadow: 0 0 10px $highlight_color_hover;
+    box-shadow: 0 0 5px $highlight_color_hover;
 }
 
 .neon-button.focus {
     color: $fonts_color;
     background: $highlight_color_hover;
-    box-shadow: 0 0 30px $highlight_color_hover;
+    box-shadow: 0 0 5px $highlight_color_hover;
     transition-delay: 1s;
 }
 
@@ -225,7 +226,6 @@
     }
 
     .intro-carousel p {
-        color: white;
         font-size: 0.9rem;
         font-weight: 700;
         text-align: center;
@@ -248,7 +248,6 @@
     }
 
     .intro-carousel p {
-        color: white;
         font-size: 0.8rem;
         font-weight: 700;
         text-align: center;
@@ -300,7 +299,6 @@
     }
 
     .intro-carousel p {
-        color: white;
         font-size: 0.9rem;
         font-weight: 700;
         text-align: center;
