--- a/src/styles/partials/myWork.scss
+++ b/src/styles/partials/myWork.scss
@@ -7,10 +7,6 @@
     width: 100%;
     height: 35px;
 }
-#my-work {
-    width: 100%;
-    height: auto;
-}
 
 #projects-container {
     display: flex;
@@ -22,13 +18,33 @@
     margin-bottom: 3rem;
 }
 
+.tenzi-game-container {
+    @include flex;
+    margin: 1rem 2rem;
+    gap: 1rem;
+}
+.tenzi-btns {
+    @include flex;
+    flex-wrap: wrap;
+    margin: 0;
+}
+
+.others-projects-container {
+    margin: 2rem;
+}
+
+.others-projects-container > h3 {
+    margin: 0;
+    text-align: center;
+}
+
 .project {
     width: 200px;
     height: 250px;
-    border: 2px solid $highlight_color;
-    box-shadow: 0 0 15px 1px rgb(0, 0, 0);
+    border: 2px solid black;
+    box-shadow: 0 0 5px 2px black;
     border-radius: 1rem;
-    background: $highlight_color;
+    // background: $highlight_color;
     position: relative;
     text-align: center;
 }
@@ -36,7 +52,7 @@
 .project-img {
     height: 200px;
     width: 100%;
-    background: gray;
+    // background: gray;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
 }
@@ -70,27 +86,30 @@
 .project-desc {
     font-size: 1rem;
     font-weight: 700;
-    color: white;
+    color: $fonts_color;
     margin-top: 0.7rem;
 }
 
 .used-technologies {
     position: absolute;
     width: 100%;
-    bottom: -20px;
+    top: 240px;
     left: 0;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 5px;
+    gap: 7px;
 }
 .used-technologies--img {
+    flex-grow: 0;
+    flex-shrink: 0;
     position: relative;
     width: 30px;
     height: 30px;
-    background: $highlight_color;
+    background: $bg_color_grey;
     border-radius: 5px;
-    box-shadow: 0 0 2px 2px black;
+    box-shadow: 0 0 1px 2px black;
     z-index: 1;
     transition: all 0.1s;
 }
@@ -108,6 +127,11 @@
         margin: 1rem 0;
         margin-bottom: 2rem;
     }
+
+    .tenzi-game-container {
+        flex-direction: column;
+    }
+
     .project {
         width: 150px; //
         height: 200px; //
@@ -127,5 +151,15 @@
         font-weight: 700;
         color: white;
         margin-top: 0.7rem;
+    }
+
+    .used-technologies {
+        top: 185px;
+    }
+
+    .used-technologies--img {
+        width: 20px;
+        height: 20px;
+        border-radius: 2px;
     }
 }
