--- a/src/styles/partials/navMenu.scss
+++ b/src/styles/partials/navMenu.scss
@@ -36,18 +36,34 @@
     padding: 0px 20px;
     font-weight: 700;
     text-decoration: none;
-    transition: color 0.5s ease-out;
+    transition: color 0.2s ease-out;
 }
 
 .nav-border--menuBtn:hover {
     color: $highlight_color;
 }
 
+.nav-border--themeBtn {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    z-index: 100;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.3rem;
+    font-size: 0.8rem;
+}
+
+.themeBtn-img {
+    height: 25px;
+}
+
 .nav-menu {
     top: 0;
     left: 0;
     @include flex;
-    width: 100%;
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
@@ -62,7 +78,7 @@
         padding: 0 20px;
         font-weight: 700;
         text-decoration: none;
-        transition: color 0.5s ease-out;
+        transition: color 0.2s ease-out;
         cursor: pointer;
     }
     span:hover {
@@ -70,7 +86,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .nav-border--menuBtn {
         display: block;
     }
@@ -82,14 +98,16 @@
         top: 40px;
         width: 160px;
         height: 150px;
-        background: rgb(26, 28, 31);
+        background: $bg_color_black;
         transform: translateY(-100%);
-        transition: all 0.5s;
+        transition: all 0.2s;
         z-index: 97;
     }
 
     .nav-menu.responsive {
         visibility: visible;
         transform: translateY(0);
+        border-bottom: 2px solid $highlight_color;
+        border-right: 2px solid $highlight_color;
     }
 }
