--- a/src/styles/vars/global.scss
+++ b/src/styles/vars/global.scss
@@ -2,6 +2,7 @@
 
 @mixin flex {
     display: flex;
+
     justify-content: center;
     align-items: center;
 }
@@ -11,11 +12,78 @@
     animation: none;
 }
 
+.nav-menu--margin {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 50px;
+}
+
+.main-section {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    margin: 0 auto;
+    @include flex;
+    flex-direction: column;
+}
+
+.main-section > h1 {
+    font-size: 1.5rem;
+    margin: 5px;
+    color: $fonts_color;
+    text-shadow: 0 0 1px rgb(117, 117, 117);
+    text-align: center;
+    position: relative;
+}
+.main-section > h1::after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: calc(50% - 200px);
+    height: 0.2rem;
+    background: $fonts_color;
+    width: 400px;
+}
+
+.stop-scrolling {
+    overflow: hidden;
+}
+
+@mixin flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@mixin hide {
+    opacity: 0;
+    animation: none;
+}
+
+.txt-highlight {
+    color: $highlight_color;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.txt-highlight--no-hover {
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.txt-highlight:hover {
+    color: $highlight_color_hover;
+    font-weight: 700;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .btn {
     margin: 1rem;
     padding: 1rem;
     color: $fonts_color;
-    background: $highlight_color;
+    background: $bg_color_grey;
     box-shadow: 0 0 5px 1px rgb(0, 0, 0);
     border-radius: 1rem;
     text-transform: uppercase;
