--- a/src/styles/partials/myWork.scss
+++ b/src/styles/partials/myWork.scss
@@ -149,7 +149,7 @@
     .project-desc {
         font-size: 0.7rem;
         font-weight: 700;
-        color: white;
+        color: $fonts_color;
         margin-top: 0.7rem;
     }
 
