--- a/src/styles/partials/popup.module.scss
+++ b/src/styles/partials/popup.module.scss
@@ -20,6 +20,8 @@
     border-radius: 1rem;
     width: 80%;
     max-width: 500px;
+    position: relative;
+    padding-bottom: 50px;
 }
 
 .popupCardHeader {
@@ -34,7 +36,7 @@
 .popupCardContent {
     box-sizing: border-box;
     width: 100%;
-    height: 80dvh;
+    height: 70dvh;
     overflow-y: auto;
     padding-bottom: 5px;
     border-radius: 0.5rem;
@@ -91,11 +93,6 @@
     }
 }
 
-.popupNav {
-    width: 80%;
-    max-width: 500px;
-    position: relative;
-}
 .popupNavPrev,
 .popupNavNext,
 .popupNavClose {
@@ -107,7 +104,27 @@
     text-decoration: none;
     position: absolute;
     transition: all 150ms ease;
-    z-index: 110;
+    border-radius: 22px;
+    width: 44px;
+    height: 44px;
+    font-size: 30px;
+    opacity: 0.4;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.popupNavPrev {
+    left: 2px;
+    bottom: 2px;
+}
+.popupNavNext {
+    right: 2px;
+    bottom: 2px;
+}
+
+.popupNavClose {
+    top: 2px;
+    right: 2px;
 }
 .popupNavPrev:hover,
 .popupNavNext:hover,
@@ -116,102 +133,6 @@
     background-color: $bg_color_black;
     text-shadow: 0;
     color: white;
-}
-
-.popupNavPrev,
-.popupNavNext {
-    width: 25px;
-    height: 100px;
-    font-size: 1.5rem;
-    border-radius: 0.5rem;
-    opacity: 0.5;
-    transform: translateY(-50%);
-}
-.popupNavPrev {
-    left: -20px;
-}
-.popupNavNext {
-    right: -20px;
-}
-
-.popupNavClose {
-    border-radius: 22px;
-    width: 44px;
-    height: 44px;
-    top: 2px;
-    right: 2px;
-    font-size: 30px;
-}
-
-//hobbies
-
-.hobbiesPopup {
-    position: fixed;
-    width: 55vw;
-    perspective: 1000px;
-    top: 0; /* height to top */
-    margin-left: 0;
-    margin-right: 0;
-    padding-top: 15vh;
-    z-index: 98;
-}
-
-.hobbiesCarousel {
-    width: 100%;
-    transform-style: preserve-3d;
-}
-.hobbiesCarousel .hobbiesCarouselItem {
-    height: 30vh;
-    width: 80%;
-    position: absolute;
-    overflow: hidden;
-}
-.hobbiesCarouselItem {
-    box-shadow: 0px 0px 10px 0px $highlight_color;
-    border-radius: 3vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    transform: translateX(-150vw) rotateY(360deg);
-    transition: all 1s;
-    padding-top: 1rem;
-    p {
-        margin-top: 1vw;
-    }
-}
-.hobbyImg {
-    border-radius: 1vh;
-    transition: ease-in-out 0.5s;
-    width: 90%;
-    height: 80%;
-    object-fit: cover;
-}
-.hobbiesCarousel p {
-    color: white;
-    font-size: 1rem;
-    font-weight: 700;
-    text-align: center;
-}
-
-.it1 {
-    transform: rotateY(0deg) translateZ(35vw);
-}
-.it2 {
-    transform: rotateY(72deg) translateZ(35vw);
-}
-.it3 {
-    transform: rotateY(144deg) translateZ(35vw);
-}
-.it4 {
-    transform: rotateY(216deg) translateZ(35vw);
-}
-.it5 {
-    transform: rotateY(288deg) translateZ(35vw);
-}
-
-.showHobbies {
-    display: block;
 }
 
 @media screen and (min-width: 1200px) {
