--- a/src/styles/partials/myWork.module.scss
+++ b/src/styles/partials/myWork.module.scss
@@ -13,8 +13,7 @@
 
 .tenziGameContainer {
     @include flex;
-    margin: 0 2rem;
-    margin-top: 2rem;
+    margin: 2rem;
     gap: 1rem;
     align-items: flex-start;
 }
