--- a/src/styles/vars/global.scss
+++ b/src/styles/vars/global.scss
@@ -63,8 +63,34 @@
     background-size: contain;
     background-repeat: no-repeat no-repeat;
     background-position: center center;
-    cursor: zoom-out;
 }
+
+// .fullScreenImg button {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     color: black;
+//     background: $bg_color_grey;
+//     text-decoration: none;
+//     position: absolute;
+//     transition: all 150ms ease;
+//     border-radius: 25px;
+//     width: 50px;
+//     height: 50px;
+//     font-size: 30px;
+//     opacity: 0.4;
+//     font-weight: 700;
+//     cursor: pointer;
+//     top: 10px;
+//     right: 10px;
+// }
+
+// .fullScreenImg button:hover {
+//     opacity: 1;
+//     background-color: $bg_color_black;
+//     text-shadow: 0;
+//     color: white;
+// }
 
 @mixin flex {
     display: flex;
