--- a/src/styles/vars/global.scss
+++ b/src/styles/vars/global.scss
@@ -130,6 +130,7 @@
     border-radius: 1rem;
     border-width: 3px;
     border-style: outset;
+    border-color: buttonborder;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 0.8rem;
@@ -153,5 +154,5 @@
 
 .btn:hover {
     background: $highlight_color_hover;
-    box-shadow: 0 0 5px 1px $highlight_color_hover;
+    // box-shadow: 0 0 2px 1px $highlight_color_hover;
 }
