--- a/src/styles/partials/CV.module.scss
+++ b/src/styles/partials/CV.module.scss
@@ -1,34 +1,78 @@
 @use "../vars/colours.scss" as *;
 @use "../vars/global.scss" as *;
 
-.CVContent {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-}
-.CVContent {
-    a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0.5rem 1rem 1rem 1rem;
-        height: 60px;
-        width: 60px;
-        // background: $highlight_color;
-        box-shadow: 0 0 5px 2px rgb(0, 0, 0);
-        border-radius: 10px;
-        transition: background-color 0.3s;
-    }
-    a:hover {
-        background: $highlight_color_hover;
-    }
+.cardsContainer {
+    @include flex;
+    flex-wrap: wrap;
+    gap: 2em;
+    width: 100%;
 }
 
-.CVContent {
-    a {
-        img {
-            height: 80%;
-            width: 80%;
-        }
-    }
+.card {
+    width: 18em;
+    height: 12em;
+    @include flex;
+    position: relative;
+}
+
+.card div {
+    box-sizing: border-box;
+    padding: 2.5em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 98%;
+    height: 98%;
+    transform: translate(-50%, -50%);
+    background-image: $bgGradient;
+    background-size: 1200% 1100%;
+    background-position: center;
+    border-radius: 1em;
+    @include flex;
+    flex-direction: column;
+}
+.card div:hover {
+    background: $highlight_color_darken;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 $highlight_color;
+}
+
+.cardsContainer .card::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(0deg, $primary, $highlight_color);
+    border-radius: 1.2em;
+    z-index: 0;
+}
+
+.card i {
+    font-size: 4em;
+    color: $highlight_color;
+    margin-bottom: 0.5em;
+    position: relative;
+}
+
+.card i::after {
+    content: "CV";
+    position: absolute;
+    bottom: -25%;
+    left: 50%;
+    color: $text-primary;
+    font-size: 0.5em;
+    text-shadow: 0 0 8px $primary;
+}
+
+.card p {
+    padding: 0;
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 700;
+    color: $text-primary;
+    margin-bottom: 0.5em;
+    position: relative;
 }
