--- a/src/styles/partials/aboutMe.module.scss
+++ b/src/styles/partials/aboutMe.module.scss
@@ -32,8 +32,8 @@
     border-radius: 2rem;
     width: 150px;
     height: 190px;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 6px 2px black;
+    background: rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 4px 0px $highlight_color;
     img {
         width: 150px;
         border-radius: 2rem;
@@ -42,8 +42,7 @@
 }
 .characters {
     margin: 0.5rem 0.5rem;
-    display: flex;
-    justify-content: center;
+    @include flex;
     align-items: flex-start;
     column-gap: 25px;
     width: 100%;
@@ -53,14 +52,12 @@
         @include flex;
         flex-direction: column;
         width: 50px;
-        transition: all 0.5s ease-in;
-        img {
+        div {
             height: 50px;
             width: 50px;
             // background: $highlight_color;
             border-radius: 10px;
-            box-shadow: 0 0 2px 2px rgb(0, 0, 0);
-            transition: all 0.2s;
+            box-shadow: 0 0 4px 0px $text-primary;
         }
         p {
             margin-top: 0.5rem;
