--- a/src/styles/partials/footer.module.scss
+++ b/src/styles/partials/footer.module.scss
@@ -2,15 +2,16 @@
 @use "../vars/global.scss" as *;
 
 .footer {
-    background: $bg_color_black;
+    background: $primary;
     width: 100%;
     height: auto;
+    margin-top: 2rem;
     p {
         font-size: 1rem;
         font-weight: 700;
         margin: auto;
         text-align: center;
-        color: $fonts_color;
+        color: $text-primary;
         span {
             color: $highlight_color;
         }
