--- a/src/styles/partials/navMenu.module.scss
+++ b/src/styles/partials/navMenu.module.scss
@@ -9,7 +9,7 @@
 
 .navBorder {
     width: 100%;
-    background: $bg_color_black;
+    background: $primary;
     position: fixed;
     padding: 10px 0;
     height: 20px;
@@ -46,12 +46,12 @@
 .navMenu {
     top: 0;
     left: 0;
+    width: 100%;
     @include flex;
     flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     position: fixed;
-    padding: 10px 0;
+    padding: 10px;
     height: 16px;
     z-index: 98;
 }
@@ -63,38 +63,76 @@
         text-decoration: none;
         transition: color 0.2s ease-out;
         cursor: pointer;
+        border: 3px solid $primary;
+        transition: all 0.3s;
     }
     span:hover {
-        color: $highlight_color_hover;
+        color: $highlight_color_darken;
+    }
+}
+
+.navMenu {
+    span {
+        i {
+            padding: 0;
+            margin: 0;
+            display: none;
+        }
     }
 }
 
 .active {
-    color: $highlight_color_hover;
+    transform: translateY(20px);
+    color: $highlight_color;
+    background-color: $primary;
+    border: 3px solid $highlight_color !important;
+    border-radius: 5px;
 }
 
-@media screen and (max-width: 800px) {
-    .navBorderMenuBtn {
-        display: block;
+@media screen and (max-width: 700px) {
+    .fullName {
+        display: none;
     }
-
     .navMenu {
-        visibility: hidden;
-        flex-direction: column;
-        justify-content: space-around;
-        top: 40px;
-        width: 160px;
-        height: 150px;
-        background: $bg_color_black;
-        transform: translateY(-100%);
-        transition: all 0.2s;
-        z-index: 97;
-    }
-
-    .navMenu.responsive {
-        visibility: visible;
-        transform: translateY(0);
-        border-bottom: 2px solid $highlight_color;
-        border-right: 2px solid $highlight_color;
+        span {
+            padding: 0 4vw;
+            i {
+                padding: 0;
+                margin: 0;
+                display: inline;
+            }
+        }
     }
 }
+
+//     .navBorderMenuBtn {
+//         display: block;
+//     }
+
+//     .navMenu {
+//         visibility: hidden;
+//         flex-direction: column;
+//         justify-content: space-around;
+//         top: 40px;
+//         width: 160px;
+//         height: 150px;
+//         background: $primary;
+//         transform: translateY(-100%);
+//         transition: all 0.2s;
+//         z-index: 97;
+//     }
+
+//     .navMenu.responsive {
+//         visibility: visible;
+//         transform: translateY(0);
+//         border-bottom: 2px solid $highlight_color;
+//         border-right: 2px solid $highlight_color;
+//     }
+//     .active {
+//         transform: translateY(0);
+//         color: $highlight_color;
+//         background-color: $primary;
+//         border: none;
+//         border-radius: 0px;
+//     }
+// }
