--- a/src/styles/partials/popup.module.scss
+++ b/src/styles/partials/popup.module.scss
@@ -16,7 +16,7 @@
 }
 
 .popupCard {
-    background: $bg_color_grey;
+    background: $secondary;
     border-radius: 1rem;
     width: 80%;
     max-width: 500px;
@@ -93,48 +93,6 @@
     }
 }
 
-.popupNavPrev,
-.popupNavNext,
-.popupNavClose {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    background: $bg_color_grey;
-    text-decoration: none;
-    position: absolute;
-    transition: all 150ms ease;
-    border-radius: 22px;
-    width: 44px;
-    height: 44px;
-    font-size: 30px;
-    opacity: 0.4;
-    font-weight: 700;
-    cursor: pointer;
-}
-
-.popupNavPrev {
-    left: 2px;
-    bottom: 2px;
-}
-.popupNavNext {
-    right: 2px;
-    bottom: 2px;
-}
-
-.popupNavClose {
-    top: 2px;
-    right: 2px;
-}
-.popupNavPrev:hover,
-.popupNavNext:hover,
-.popupNavClose:hover {
-    opacity: 1;
-    background-color: $bg_color_black;
-    text-shadow: 0;
-    color: white;
-}
-
 @media screen and (min-width: 1200px) {
     .hobbiesPopup {
         width: 500px;
@@ -166,16 +124,16 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: transparent;
+    background: $secondary;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #1b1b1b;
+    background: $highlight_color;
     border-radius: 0.5rem;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #666666;
+    background: $highlight_color_darken;
 }
