--- a/src/styles/vars/colours.scss
+++ b/src/styles/vars/colours.scss
@@ -1,13 +1,33 @@
 :root {
-    --bg_color_black: #222831;
-    --bg_color_grey: #393e46;
-    --highlight_color: #64ffff;
-    --highlight_color_hover: #00ffff;
-    --fonts_color: #eeeeee;
+    --primary: #191919;
+    --secondary: #111111;
+    --highlight_color: #2d85ff;
+    --highlight_color_darken: #256fd5;
+    --text-primary: #fff;
+    --text-secondary: #8d8d8d;
+    --panel: #1e1e1e;
 }
 
-$bg_color_black: var(--bg_color_black);
-$bg_color_grey: var(--bg_color_grey);
+.light-theme {
+    --primary: #efefef;
+    --secondary: #e4e4e4;
+    --panel: #fff;
+    --text-primary: #000;
+    --text-secondary: #7a7a7a;
+}
+
+$primary: var(--primary);
+$secondary: var(--secondary);
 $highlight_color: var(--highlight_color);
-$highlight_color_hover: var(--highlight_color_hover);
-$fonts_color: var(--fonts_color);
+$highlight_color_darken: var(--highlight_color_darken);
+$text-primary: var(--text-primary);
+$text-secondary: var(--text-secondary);
+$panel: var(--panel);
+$bgGradient: linear-gradient(
+    30deg,
+    var(--highlight_color),
+    var(--highlight_color_darken),
+    var(--primary),
+    var(--highlight_color_darken),
+    var(--highlight_color)
+);
