--- a/src/styles/partials/aboutMe.module.scss
+++ b/src/styles/partials/aboutMe.module.scss
@@ -20,10 +20,9 @@
 .profileImgContainer {
     float: left;
     width: 250px;
-    display: flex;
+    @include flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
 }
 
 .profileImg {
@@ -70,9 +69,8 @@
 
 @media screen and (max-width: 768px) {
     .description {
-        display: flex;
+        @include flex;
         flex-direction: column;
-        align-items: center;
     }
     .description > :nth-child(1) {
         order: 0;
