--- a/src/styles/partials/hobbiesCarousel.module.scss
+++ b/src/styles/partials/hobbiesCarousel.module.scss
@@ -10,9 +10,12 @@
     background: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(4px);
     z-index: 99;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex;
+}
+
+.popupNavClose {
+    top: 3vh;
+    right: 3vw;
 }
 
 //hobbies
@@ -21,7 +24,7 @@
     position: fixed;
     width: 300px;
     perspective: 1000px;
-    top: 0; /* height to top */
+    top: 0;
     margin-left: 0;
     margin-right: 0;
     padding-top: 15vh;
@@ -41,10 +44,9 @@
 .hobbiesCarouselItem {
     box-shadow: 0px 0px 10px 0px $highlight_color;
     border-radius: 3vh;
-    display: flex;
+    @include flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
     transform: translateX(-150vw) rotateY(360deg);
     transition: all 1s;
     padding-top: 1rem;
@@ -108,27 +110,4 @@
             transform: rotateY(288deg) translateZ(300px);
         }
     }
-}
-
-/* Scrollbar */
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #1b1b1b;
-    border-radius: 0.5rem;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #666666;
 }
