--- a/src/styles/partials/intro.module.scss
+++ b/src/styles/partials/intro.module.scss
@@ -16,9 +16,7 @@
 }
 
 .introCarousel {
-    display: flex;
-    justify-content: center;
-    align-self: center;
+    @include flex;
     width: 100%;
     transform-style: preserve-3d;
 }
@@ -38,18 +36,14 @@
     overflow: hidden;
     box-shadow: 0px 0px 20px 0px #000;
     border-radius: 3vh;
-    display: flex;
+    @include flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     transition: all 1s;
     transform: rotateY(0) translateZ(0);
 }
 
 .introCarouselItemContent {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex;
     width: 90%;
     height: 90%;
     border-radius: 2vh;
@@ -73,7 +67,7 @@
 
 .introCarouselItem.it1 {
     z-index: 0;
-    left: -400px;
+    left: -350px;
     transform: rotateY(-20deg);
 }
 
@@ -83,7 +77,7 @@
 }
 
 .introCarouselItem.it3 {
-    right: -300px;
+    right: -350px;
     z-index: 2;
     transform: rotateY(20deg);
 }
