--- a/src/styles/partials/myWork.module.scss
+++ b/src/styles/partials/myWork.module.scss
@@ -2,8 +2,7 @@
 @use "../vars/global.scss" as *;
 
 .projectsContainer {
-    display: flex;
-    justify-content: center;
+    @include flex;
     flex-wrap: wrap;
     column-gap: 1rem;
     row-gap: 3rem;
@@ -56,10 +55,8 @@
 }
 
 .projectButtons {
-    display: flex;
+    @include flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     box-sizing: border-box;
     position: absolute;
     width: 100%;
@@ -71,6 +68,14 @@
     opacity: 0;
     transition: 0.2s;
     overflow: hidden;
+}
+
+.btn > img {
+    position: absolute;
+    bottom: -25px;
+    right: -25px;
+    height: 50px;
+    width: 50px;
 }
 
 .projectButtonsHover {
