--- a/src/styles/partials/popup.module.scss
+++ b/src/styles/partials/popup.module.scss
@@ -10,9 +10,7 @@
     background: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(4px);
     z-index: 99;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex;
 }
 
 .popupCard {
@@ -40,9 +38,8 @@
     overflow-y: auto;
     padding-bottom: 5px;
     border-radius: 0.5rem;
-    display: flex;
+    @include flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .popupCardImg {
