--- a/src/styles/partials/tenziDescription.module.scss
+++ b/src/styles/partials/tenziDescription.module.scss
@@ -48,7 +48,6 @@
 .appShotsContainer {
     margin-top: 50px;
     @include flex;
-    flex-direction: row;
     gap: 1rem;
     flex-wrap: wrap;
     max-width: 600px;
@@ -69,10 +68,8 @@
 
 .globalDiagram {
     margin: 1rem;
-    display: flex;
+    @include flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .globalDiagram p {
@@ -99,7 +96,7 @@
     box-sizing: border-box;
     margin: 0;
     // width: 400px;
-    display: flex;
+    @include flex;
     flex-direction: column;
     // border-radius: 0.5rem;
     // box-shadow: 0px 0px 4px 0px $highlight_color;
@@ -112,9 +109,7 @@
 }
 .techSectionIMG {
     margin: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    @include flex;
     gap: 1rem;
 }
 .techSectionIMG > img {
